Name and package fix

--- a/public/templates/about.hbs
+++ b/public/templates/about.hbs
@@ -2,7 +2,7 @@
     <h1>Change Log</h1>
     <div class="about-content">
         {{#each versions}}
-            <h2>TorFlow Version - {{this.version}} ({{this.releaseDate}})</h2>
+            <h2>TorFlowV2 Version - {{this.version}} ({{this.releaseDate}})</h2>
             <div class="release-notes-container">
                 <h4>Release Notes:</h4>
                 <ul class="release-notes-list">
